tests/paczka1/small_fuzzy/54333086.err
Error in line 7: ubL2pAlp A101 65,8
Error in line 10: A281 A265 52,57
Error in line 13: OUt3yyB A281 6,1
